logs/tracking/build.make.512.log.stderr
In file included from /usr/include/pcl-1.7/pcl/visualization/pcl_visualizer.h:52:0,
                 from /usr/include/pcl-1.7/pcl/visualization/cloud_viewer.h:39,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/PointCloudMap.h:10,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/SparseAlignment.h:13,
                 from /home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp:1:
/usr/include/pcl-1.7/pcl/visualization/area_picking_event.h: In member function ‘bool pcl::visualization::AreaPickingEvent::getPointsIndices(std::vector<int>&) const’:
/usr/include/pcl-1.7/pcl/visualization/area_picking_event.h:64:30: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
           if (nb_points_ == -1)
                              ^
/home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp: In function ‘Eigen::Matrix<float, 8, 1> optimize(Eigen::Matrix<float, 8, 1>, cv::Mat&, cv::Mat&, cv::Mat&, cv::Mat&, cv::Mat&, Eigen::MatrixXf, Eigen::Matrix3f, cv::Mat&)’:
/home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp:129:8: warning: unused variable ‘e_init_norm’ [-Wunused-variable]
  float e_init_norm = 0;
        ^
/home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp: In function ‘Eigen::Matrix<float, 8, 1> optimize2(Eigen::Matrix<float, 8, 1>, cv::Mat&, int)’:
/home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp:213:33: error: ‘K_scales’ was not declared in this scope
  Eigen::Matrix3f K_multiplier = K_scales[i];
                                 ^
/home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp:213:42: error: ‘i’ was not declared in this scope
  Eigen::Matrix3f K_multiplier = K_scales[i];
                                          ^
/home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp:214:22: error: ‘keyframe_pts’ was not declared in this scope
  int num_points = (*(keyframe_pts[i])).cols();
                      ^
/home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp:231:57: error: ‘Pts’ was not declared in this scope
   Eigen::VectorXf valid_pts = Eigen::VectorXf::Constant(Pts.cols(),1);
                                                         ^
/home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp:240:20: error: ‘keyframe_ref_vals’ was not declared in this scope
   e = warped_val-*(keyframe_ref_vals[scale]);
                    ^
/home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp:249:27: error: ‘keyframe_jacobians’ was not declared in this scope
     J_new.row(count) = (*(keyframe_jacobians[i])).row(i);
                           ^
/home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp:226:8: warning: unused variable ‘e_init_norm’ [-Wunused-variable]
  float e_init_norm = 0;
        ^
make[2]: *** [CMakeFiles/tracking.dir/src/SparseAlignment.cpp.o] Error 1
make[1]: *** [CMakeFiles/tracking.dir/all] Error 2
make: *** [all] Error 2
